[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://response/matrix-response/matrix-response.tscn" type="PackedScene" id=2]
[ext_resource path="res://status/test-status/test-status.tscn" type="PackedScene" id=3]
[ext_resource path="res://request/test-request/test-request.tscn" type="PackedScene" id=4]
[ext_resource path="res://http/http-scene/HttpScene.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HttpScene" parent="." instance=ExtResource( 5 )]

[node name="TestStatus" parent="." instance=ExtResource( 3 )]

[node name="TestRequest" parent="." instance=ExtResource( 4 )]

[node name="MatrixResponse" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="State" type="Label" parent="Control"]
margin_left = 880.0
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 594.0
text = "Hello, world"
